# english_miniapp

./: .gitignore  app.py  config-overrides.js  database.py  index.html  kalk.py  package-lock.json  package.json  pyproject.toml  requirements.txt  webpack.config.js
docs/: index.html  index.js  main.js  style.css
static/: style.css
templates/: index.html
