[tool.poetry]
name = "english-miniapp"
version = "0.1.0"
description = "miniapp"
authors = ["Andrey Dmitrievich <developerpro0py@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
